infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # we only want 1 pod
  selector: # look at all the pods that have app: posts
    matchLabels:
      app: client
  template: # this specifies the actual pod
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: raph37/learning_microservices_client:latest

---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
