infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # we only want 1 pod
  selector: # look at all the pods that have app: posts
    matchLabels:
      app: comments
  template: # this specifies the actual pod
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: raph37/learning_microservices_comments:latest

---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5000
      targetPort: 5000
