infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # we only want 1 pod
  selector: # look at all the pods that have app: posts
    matchLabels:
      app: moderation
  template: # this specifies the actual pod
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: raph37/learning_microservices_moderation:latest

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4004
      targetPort: 4004
