infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-serv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts-depl
      protocol: TCP
      port: 4000 # the port of the node port
      targetPort: 4000 # target port is the port on the container
