infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # we only want 1 pod
  selector: # look at all the pods that have app: posts
    matchLabels:
      app: query
  template: # this specifies the actual pod
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: raph37/learning_microservices_query:latest

---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4003
      targetPort: 4003
